<resources>
    <string name="app_name">Tempat Wisata Aceh</string>
    <string name="favorite">favorite</string>
    <string name="bagikan">bagikan</string>
    <string name="mesjid_raya_baiturrahman">Mesjid Raya Baiturrahman</string>
    <string name="banda_aceh">Banda Aceh</string>
    <string name="deskripsi">Deskripsi mengenai sejarah singkat tempat wisata dan hal-hal yang dianggap penting yang perlu
    di informasikan kepada para pelancong yang akan bepergian ke Aceh dan sekitarnya
    </string>
    <string name="kategori">Kategori</string>
    <string name="isi_kategori">Isi Kategori</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="isi_jam_operasional">Isi Jam Operasional</string>
</resources>
